Debug responsive layout issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,6 @@
   height: 64vw;
 }
 
-.App .app-description {
+.App .app-description .content-block {
   margin-top: 0;
 }
